[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
jsonwebtoken = "10.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
