[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
rand = "0.8"
redis = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
